--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <canvas></canvas>
   <div class="container">
     <h1>るいるいだよ！</h1>
-    <p>以下のリンクから、私のアカウントやプロフィールをチェックしてね！</p>
+    <p>以下からリンク先に飛べます</p>
     <div class="links">
       <div class="link-item">
         <img src="twitter_icon.png" alt="Twitter">
